Added net spd stuff

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -6,4 +6,9 @@ sourceCompatibility = targetCompatibility = appJavaCompatibility
 dependencies {
     api project(':SPD-classes')
     implementation project(':services')
+    implementation 'io.socket:socket.io-client:2.0.1'
+
+    //jackson
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
 }
